cli-docs: Add patat

--- a/roles/cli-docs/tasks/main.yml
+++ b/roles/cli-docs/tasks/main.yml
@@ -3,3 +3,10 @@
   package:
     name: hugo
     state: latest
+  when: role_version is version("0.1.0", "lt")
+- name: Install patat, CLI markdown presentation tool
+  become: yes
+  package:
+    name: patat
+    state: latest
+  when: role_version is version("0.1.0", "lt")
