--- a/roles/addon-remarkable/tasks/03_device.yml
+++ b/roles/addon-remarkable/tasks/03_device.yml
@@ -17,7 +17,7 @@
     template:
       src: remarkable-resetup.sh.j2
       dest: "{{rmtmpdir.path}}/remarkable-resetup.sh"
-      mode: u+x
+      mode: uo+x
   - name: Download rm-Vnc-Server
     get_url:
       url: "https://github.com/pl-semiotics/rM-vnc-server/releases/download/v0.0.2/rM2-vnc-server-standalone"
