cli-rss: Link URL file and ensure its existence

--- a/roles/cli-rss/tasks/main.yml
+++ b/roles/cli-rss/tasks/main.yml
@@ -20,3 +20,13 @@
       dest: ~/.newsboat/config
       state: link
       force: yes
+- name: Ensure urls file exists
+  file:
+      path: ~/.pqrs/newsboat/urls
+      state: touch
+- name: Link url file
+  file:
+      src: ~/.pqrs/newsboat/urls
+      dest: ~/.newsboat/urls
+      state: link
+      force: yes
